
{{ $NEXT }}
    - Fix missing Try::Tiny dependency
    - Don't try to find a row by primary key if not all primary key columns are
      defined
    - Reduce select queries for has_many relationships
      to one per non-prefetched or none for prefetched has_many relationships
      down from one per related row even for prefetched relationships
    - Stable update order by sorting all columns and relationships

0.34      2014-02-06 23:37:32 America/New_York
    - More changes to support custom CODE relationship condition

0.33      2014-02-06 14:58:54 America/New_York
    - Don't die on custom CODE relationship condition

0.32      2014-01-20 19:15:29+01:00 Europe/Vienna
    - 'id' can't be used any more as an alias for the primary key column name
      as DBIx::Class doesn't treat it special
    - Try to construct a new row object with all given update attributes and
      use it to find the row in the database

0.31 Wed Nov 6, 2013
    - Fixed failing test when DBIC_TRACE_PROFILE is set
    - Fix problem with join_type LEFT and undef (rt67528)
    - discard_changes before handling post_updates

0.30  Fri Jun 7, 2013
    - Update foreign key instead of related object when all PKs are set on a
      relationship with accessor single or filter

0.29 Thu May 2, 2013
    - Remove DBIx::Class::InflateColumn::FS dependency

0.28  Wed Apr 3, 2013
    - Don't delete and re-add all many-to-many rows. Transform m2m data to
      recursive has_many data if IntrospectableM2M is loaded.

0.27  Tues Feb 26, 2013
    - Do an update on the object when there are 'other_updates' in addition
      to when the row 'is_changed' because of possible custom update methods

0.26  Wed Nov 28, 2012
    - Fix multi-pk has_many bug
    - Fix has_many with where conditions

0.25  Thu Apr 12, 2012
    - Suppress DBIC warnings: NULL/undef values supplied for requested
      unique constraint 'primary'.

0.24      2011-05-16 15:34:10 America/New_York